[tool:pytest]
testpaths = tests
[sdist]
formats=zip
[metadata]
description-file = README.md
[flake8]
max-line-length = 100
max-complexity = 20
ignore = E124,E201,E202,E225,E128,E226,W601,E265,E731,E127,E501,W191,W503,W504,W605
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,conftest.py,setup.py,venv,.eggs
jobs=auto
